<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.LoginActivity">

    <com.android.kotlinmall.widgets.HeaderBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/loginBtnText"
            android:id="@+id/mLoginHeaderBar"
            app:isShowBack="false"
            app:rightText="@string/btnRegisterText"/>


    <EditText android:layout_width="match_parent"
              android:id="@+id/mPhone"
              android:layout_height="wrap_content"
              android:hint="@string/editPhoneHint"
              android:layout_margin="@dimen/common_margin"
              android:background="@null"
              android:text="18258457950"
              android:inputType="phone"
    />
    <EditText android:layout_width="match_parent"
              android:hint="@string/editPassWordHint"
              android:background="@null"
              android:text="123456"
              android:layout_margin="@dimen/common_margin"
              android:id="@+id/mPwd"
              android:inputType="textPassword"
              android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/mLoginBtn"
            style="@style/FullBtnStyle"
            android:text="@string/loginBtnText"/>


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/forgetPwd"
              android:layout_gravity="right"
              android:textColor="@color/common_blue"
              android:textSize="@dimen/text_large_size"
              android:id="@+id/mGoForgetPwd"
              android:layout_margin="@dimen/common_margin"/>

</LinearLayout>
