<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".ui.activity.RegisterActivity">
    <com.android.kotlinmall.widgets.HeaderBar
            android:layout_width="match_parent"
            app:isShowBack="true"
            app:titleText="注册"
            android:id="@+id/headerBar"
            android:layout_height="wrap_content"
    />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/mFormLayout"
                  android:layout_below="@id/headerBar"
                  android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent"
                      android:orientation="horizontal"
                      android:layout_height="wrap_content">
            <EditText android:layout_width="0dp"
                      android:id="@+id/mPhone"
                      android:background="@null"
                      android:layout_margin="@dimen/common_margin"
                      android:layout_height="wrap_content"
                      android:hint="@string/editPhoneHint"
                      android:inputType="phone"
                      android:layout_weight="1"/>
            <com.android.kotlinmall.widgets.VerifyButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/mVerifyBtn"
                    android:background="@null"
                    android:textColor="@color/common_blue"
                    android:text="@string/verifyCodeString"/>
        </LinearLayout>
        <EditText android:layout_width="match_parent"
                  android:hint="@string/editVerifyCodeHint"
                  android:id="@+id/mVerifyEt"
                  android:layout_margin="@dimen/common_margin"
                  android:background="@null"
                  android:layout_height="wrap_content"/>
        <EditText android:layout_width="match_parent"
                  android:hint="@string/editPassWordHint"
                  android:id="@+id/mPwd"
                  android:layout_margin="@dimen/common_margin"
                  android:background="@null"
                  android:inputType="number"
                  android:layout_height="wrap_content"/>

        <Button style="@style/FullBtnStyle"
                android:id="@+id/mRegisterBtn"
                android:text="@string/btnRegisterText"/>
    </LinearLayout>


</LinearLayout>