<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.ResetPwdActivity">
    <com.android.kotlinmall.widgets.HeaderBar
            android:id="@+id/mHeaderBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleText="@string/resetPwd"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border_corner_all"
            android:layout_margin="@dimen/common_margin">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <EditText android:id="@+id/mPwd"
                      android:layout_width="0dp"
                      android:layout_height="@dimen/common_line_height"
                      android:background="@null"
                      android:paddingLeft="@dimen/common_padding_small"
                      android:hint="@string/editPassWordHint"
                      android:drawableLeft="@drawable/icon_phone"
                      android:drawablePadding="@dimen/common_padding_small"
                      android:layout_weight="1.0"
                      android:inputType="phone"/>

        </LinearLayout>

        <EditText android:id="@+id/mPwdSure"
                  android:background="@null"
                  android:paddingLeft="@dimen/common_padding_small"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/common_line_height"
                  android:hint="@string/editPassWordSureHint"
                  android:drawableLeft="@drawable/icon_verify_code"
                  android:drawablePadding="@dimen/common_padding_small"
                  android:inputType="number"/>
    </LinearLayout>
    <Button
            android:id="@+id/mResetBtn"
            style="@style/FullBtnStyle"
            android:text="@string/resetPwd"
    />
</LinearLayout>